--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,10 +7,11 @@ body {
     border: 1px solid black;
     margin: auto;
     max-width: 500px;
+    box-shadow: 10px 10px;
 }
 
 .library-box-not-top {
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .input {
@@ -28,6 +29,7 @@ body {
 .marquee-header {
     margin: 10px 0px;
     margin-bottom: 7px;
+
 }
 
 .library-form {
