min width about footer

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,9 +6,9 @@ body {
 .library-box {
     border: 1px solid black;
     margin: 0 auto;     /* always 20px on left & right */
-    max-width: 500px;
+    max-width: 400px;
     box-shadow: 10px 10px;
-    width: min(100% - 40px, 500px);    /* full width minus 20px each side, or 500px max */
+    width: min(100% - 40px, 400px);    /* full width minus 20px each side, or 500px max */
 
 }
 
@@ -50,9 +50,9 @@ button {
     cursor: pointer;
 }
 
-.header-mobile { display: none; }
+.about-footer {
+    text-align: center;
+    max-width: min(100% - 40px, 400px);
+    margin: 40px auto;
 
-@media (max-width: 600px) {
-  .header-desktop { display: none; }
-  .header-mobile { display: block; }
 }
